# week11-production-deployment

./: .dockerignore  .env.example  .github workflows  .gitignore  Dockerfile  Dockerfile.prod  README.md  _init_.py  alerts.yml  backup.sh  cd-production.yml  cd-staging.yml  ci.yml  config  deploy.sh  deployment.md  development.py  docker  docker-compose.prod.yml  docker-compose.yml  docs  grafana-dashboard.json  healthcheck.sh  migrate.sh  monitoring  nginx  operations.md  production.py  prometheus.yml  pyproject.toml  requirements-prod.txt  requirements.txt  scripts  security.md  src  testing.py  troubleshooting.md
