[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "library-app"
version = "1.0.0"
description = "A CLI-based Library Management Application with optional production deployment."
authors = [{name="Your Name", email="Your Email"}]
readme = "README.md"
license = {text="MIT"}
requires-python = ">=3.10"

dependencies = [
    "flask==2.3.2",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "pydantic==2.1.2"
]

[tool.setuptools.packages.find]
where = ["src"]
